[package]
name = "http-profiler"
version = "0.1.0"
edition = "2021"

[dependencies]
quinn = "0.11.1"
reqwest = { version = "0.12.4", features = ["http2", "default-tls", "native-tls", "native-tls-vendored", "native-tls-alpn", "rustls-tls", "rustls-tls-manual-roots", "rustls-tls-webpki-roots", "rustls-tls-native-roots", "blocking", "charset", "cookies", "gzip", "brotli", "zstd", "deflate", "json", "multipart", "stream", "socks", "hickory-dns"] }
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"] }
